Fixed Java8 compliance.